Sample/YHC/YHC.Portal/Views/Error/Maintainance.cshtml
@{
    Layout = "~/Views/Error/_Layout.cshtml";
}
<!--错误500-->
<div class="error">
	<h1>系统升级</h1>
    <h2>英皇国际系统升级中....</h2>
    <p>英皇国际以用户为宗旨为了更好的服务于广大用户需要定期维护升级给您带来的不便敬请谅解</p>
    <span>预计在2015年11月13日 12：30升级完毕</span>
    <a href="#" title="7x24小时在线客服">7x24小时在线客服</a>
    <div class="error_footer">英皇国际网站属于菲律宾卡格杨(Cagayan)授权和监管 所有版权归英皇国际所有，违者必究。<br />
2004-2015 K9900.COM LIMITED.RCBC Plaza,6819Sen.Gil Puyat corner Ayala Avenue,Mak</div>
</div>